change svg and files

--- a/index.html
+++ b/index.html
@@ -291,7 +291,34 @@
             </li>
                         </ul>
 </div>
+<div class="footer-subscribe-container">
+<form class="footer-email-form">
+    <label> Subscribe
+        <input type="text" name="email" placeholder="Email" />
+    </label>
+</label>
+<button type="submit">Subscribe
+    <a href="" class="icon-footer-send"><svg class="icon-footer-sendpict" width="24" height="20" ><use href="./images/icons.svg#icon-icon-send"></use>
+    </svg></a>
+</button>
+</form>
+</div>
 </div>
 </footer>
+<div class="backdrop">
+    <div class="modal">
+        <button type="button" class="modal-close"><a href="" class="modal-close-link">
+            <svg class="icon-modal-close" width="8" height="8" ><use href="./images/icons.svg#icon-close-black"></use>
+        </svg></a>
+    </button>
+    <p class="modal-title">Leave your contacts and we will call you back</p>
+    <form class="modal-form">
+<input type="text" class="modal-input" name="user-name" />
+<input type="text" class="modal-input" name="user-phone"/>
+<input type="text" class="modal-input" name="user-email"/>
+<button type="submit">Send</button>
+    </form>
+    </div>
+</div>
 </body>
 </html>
