--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <ul class="features-list">
         <li class="feature-item">
             <div class="feature-icon-container">
-                <svg width="64" height="64" ><use href="./images/icons.svg#icon-antenna"></use>
+                <svg width="64" height="64" ><use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
             </div>
      <h3 class="features">Strategy</h3>   
@@ -63,7 +63,7 @@
     </li>
     <li class="feature-item">
         <div class="feature-icon-container">
-            <svg width="64" height="64" ><use href="./images/icons.svg#icon-clock"></use>
+            <svg width="64" height="64" ><use href="./images/icons.svg#icon-clock-1"></use>
             </svg>
         </div>
     <h3 class="features">Punctuality</h3>
@@ -71,7 +71,7 @@
 </li>
     <li class="feature-item">
         <div class="feature-icon-container">
-            <svg width="64" height="64" ><use href="./images/icons.svg#icon-diagram"></use>
+            <svg width="64" height="64" ><use href="./images/icons.svg#icon-diagram-1"></use>
             </svg>
         </div>
     <h3 class="features">Diligence</h3>
@@ -79,7 +79,7 @@
 </li>
     <li class="feature-item">
         <div class="feature-icon-container">
-            <svg width="64" height="64" ><use href="./images/icons.svg#icon-astronaut"></use>
+            <svg width="64" height="64" ><use href="./images/icons.svg#icon-astronaut-1"></use>
             </svg>
         </div>
     <h3 class="features">Technologies</h3>
@@ -99,19 +99,19 @@
         <p class="teamprof">Product Designer</p>
             <ul class="icon-team-list">
 <li class="icon-team-item">
-    <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-instagram"></use>
+    <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-instagram-2"></use>
     </svg></a>
 </li>
 <li class="icon-team-item">
-    <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-twitter"></use>
+    <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-twitter-1"></use>
     </svg></a>
 </li>
 <li class="icon-team-item">
-    <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-facebook"></use>
+    <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-facebook-1"></use>
     </svg></a>
 </li>
 <li class="icon-team-item">
-    <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-linkedin"></use>
+    <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-linkedin-1"></use>
     </svg></a>
 </li>
             </ul>
@@ -124,19 +124,19 @@
         <p class="teamprof">Frontend Developer</p>
         <ul class="icon-team-list">
             <li class="icon-team-item">
-                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-instagram"></use>
+                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg></a>
             </li>
             <li class="icon-team-item">
-                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-twitter"></use>
+                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg></a>
             </li>
             <li class="icon-team-item">
-                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-facebook"></use>
+                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg></a>
             </li>
             <li class="icon-team-item">
-                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-linkedin"></use>
+                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg></a>
             </li>
                         </ul>
@@ -149,19 +149,19 @@
         <p class="teamprof">Marketing</p>
         <ul class="icon-team-list">
             <li class="icon-team-item">
-                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-instagram"></use>
+                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg></a>
             </li>
             <li class="icon-team-item">
-                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-twitter"></use>
+                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg></a>
             </li>
             <li class="icon-team-item">
-                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-facebook"></use>
+                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg></a>
             </li>
             <li class="icon-team-item">
-                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-linkedin"></use>
+                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg></a>
             </li>
                         </ul>
@@ -174,19 +174,19 @@
         <p class="teamprof">UI Designer</p>
         <ul class="icon-team-list">
             <li class="icon-team-item">
-                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-instagram"></use>
+                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg></a>
             </li>
             <li class="icon-team-item">
-                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-twitter"></use>
+                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg></a>
             </li>
             <li class="icon-team-item">
-                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-facebook"></use>
+                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg></a>
             </li>
             <li class="icon-team-item">
-                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-linkedin"></use>
+                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg></a>
             </li>
                         </ul>
@@ -274,36 +274,33 @@
     <p class="footer-social-par">Social media</p>
         <ul class="icon-footer-list">
             <li class="icon-footer-item">
-                <a href="" class="icon-footer-link"><svg class="icon-footer-social" width="24" height="24" ><use href="./images/icons.svg#icon-instagram"></use>
+                <a href="" class="icon-footer-link"><svg class="icon-footer-social" width="24" height="24" ><use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg></a>
             </li>
             <li class="icon-footer-item">
-                <a href="" class="icon-footer-link"><svg class="icon-footer-social" width="24" height="24" ><use href="./images/icons.svg#icon-twitter"></use>
+                <a href="" class="icon-footer-link"><svg class="icon-footer-social" width="24" height="24" ><use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg></a>
             </li>
             <li class="icon-footer-item">
-                <a href="" class="icon-footer-link"><svg class="icon-footer-social" width="24" height="24" ><use href="./images/icons.svg#icon-facebook"></use>
+                <a href="" class="icon-footer-link"><svg class="icon-footer-social" width="24" height="24" ><use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg></a>
             </li>
             <li class="icon-footer-item">
-                <a href="" class="icon-footer-link"><svg class="icon-footer-social" width="24" height="24" ><use href="./images/icons.svg#icon-linkedin"></use>
+                <a href="" class="icon-footer-link"><svg class="icon-footer-social" width="24" height="24" ><use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg></a>
             </li>
                         </ul>
 </div>
-<div class="footer-subscribe-container">
 <form class="footer-email-form">
-    <label> Subscribe
-        <input type="text" name="email" placeholder="Email" />
-    </label>
-</label>
-<button type="submit">Subscribe
+    <div class="footer-subscribe-container">
+    <label class="subscribe-label">Subscribe</label>
+        <input type="text" name="email" placeholder="Email" class="subscribe-footer-text"/>
+    </div>
+        <button type="submit" class="subscribe-btn">Subscribe
     <a href="" class="icon-footer-send"><svg class="icon-footer-sendpict" width="24" height="20" ><use href="./images/icons.svg#icon-icon-send"></use>
     </svg></a>
 </button>
 </form>
-</div>
-</div>
 </footer>
 <div class="backdrop">
     <div class="modal">
@@ -313,10 +310,45 @@
     </button>
     <p class="modal-title">Leave your contacts and we will call you back</p>
     <form class="modal-form">
-<input type="text" class="modal-input" name="user-name" />
-<input type="text" class="modal-input" name="user-phone"/>
-<input type="text" class="modal-input" name="user-email"/>
-<button type="submit">Send</button>
+        <div class="modal-field">
+        <label for="user-name" class="modal-label">Name</label>
+        <div class="modal-field-wrap">
+<input type="text" class="modal-input" name="user-name" id="user-name" />
+<svg class="modal-icon"  width="12" height="12" >
+    <use href="./images/icons.svg#icon-user"></use>
+</svg>
+</div>
+</div>
+<div class="modal-field">
+<label for="user-phone" class="modal-label">Phone</label>
+<div class="modal-field-wrap">
+<input type="tel" class="modal-input" name="user-phone" id="user-phone" />
+<svg class="modal-icon"  width="12" height="12" >
+    <use href="./images/icons.svg#icon-phone"></use>
+</svg>
+</div>
+</div>
+<div class="modal-field">
+<label for="user-email" class="modal-label">Email</label>
+<div class="modal-field-wrap">
+<input type="email" class="modal-input" name="user-email" id="user-email" />
+<svg class="modal-icon"  width="12" height="12" >
+    <use href="./images/icons.svg#icon-mail"></use>
+</svg>
+</div>
+</div>
+<div class="modal-field">
+    <label for="user-comment" class="modal-label">Comment</label>
+    <textarea 
+    name="user-comment" id="user-comment" 
+    class="modal-text" placeholder="Text input" 
+    ></textarea>
+</div>
+<div class="modal-check-feild">
+<input type="checkbox" name="policy" id="policy" value="true" class="modal-check">
+<label for="policy" class="modal-text-policy">I accept the terms and conditions of the <span class="priv-pol">Privacy Policy</span></label>
+</div>
+<button type="submit" class="modal-btn">Send</button>
     </form>
     </div>
 </div>
