--- a/index.html
+++ b/index.html
@@ -291,16 +291,21 @@
             </li>
                         </ul>
 </div>
+<div class="footer-form-container">
 <form class="footer-email-form">
-    <div class="footer-subscribe-container">
-    <label class="subscribe-label">Subscribe</label>
-        <input type="text" name="email" placeholder="Email" class="subscribe-footer-text"/>
-    </div>
+    <p class="subscribe-text">Subscribe</p>
+    <form class="footer-subscribe-form">
+        <label for="footer-subscribe" class="footer-subscribe-label">
+            <input type="text" name="email" placeholder="E-mail" class="subscribe-footer-text"/>
+        </label>
         <button type="submit" class="subscribe-btn">Subscribe
-    <a href="" class="icon-footer-send"><svg class="icon-footer-sendpict" width="24" height="20" ><use href="./images/icons.svg#icon-icon-send"></use>
-    </svg></a>
+            <a href="" class="icon-footer-send"><svg class="icon-footer-sendpict" width="24" height="20" ><use href="./images/icons.svg#icon-icon-send"></use>
+            </svg></a>
+    </form>
 </button>
 </form>
+</div>
+</div>
 </footer>
 <div class="backdrop">
     <div class="modal">
