--- a/index.html
+++ b/index.html
@@ -295,13 +295,12 @@
     <p class="subscribe-text">Subscribe</p>
     <form class="footer-subscribe-form">
         <label for="footer-subscribe" class="footer-subscribe-label">
-            <input type="text" name="email" placeholder="E-mail" class="subscribe-footer-text"/>
+            <input type="email" name="email" placeholder="E-mail" class="subscribe-footer-text"/>
         </label>
-        <button type="submit" class="subscribe-btn">Subscribe
-            <a href="" class="icon-footer-send"><svg class="icon-footer-sendpict" width="24" height="20" ><use href="./images/icons.svg#icon-icon-send"></use>
-            </svg></a>
-    </form>
-</button>
+        <button type="submit" class="subscribe-btn">Subscribe <span class="footer-icon-span"><svg class="icon-footer-sendpict" width="24" height="20" ><use href="./images/icons.svg#icon-icon-send"></use>
+            </svg></span>
+        </button>
+</form>
 </div>
 </div>
 </footer>
