--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
         <label for="footer-subscribe" class="footer-subscribe-label">
             <input type="email" name="email" placeholder="E-mail" class="subscribe-footer-text"/>
         </label>
-        <button type="submit" class="subscribe-btn">Subscribe <span class="footer-icon-span"><svg class="icon-footer-sendpict" width="24" height="20" ><use href="./images/icons.svg#icon-icon-send"></use>
-            </svg></span>
+        <button type="submit" class="subscribe-btn">Subscribe <a href="" class="icon-footer-btn"><svg class="icon-footer-sendpict" width="24" height="24" ><use href="./images/icons.svg#icon-icon-send"></use>
+            </svg></a>
         </button>
 </form>
 </div>
