--- a/index.html
+++ b/index.html
@@ -294,11 +294,11 @@
 <div class="footer-form-container">
     <p class="subscribe-text">Subscribe</p>
     <form class="footer-subscribe-form">
-        <label for="footer-subscribe" class="footer-subscribe-label">
-            <input type="email" name="email" placeholder="E-mail" class="subscribe-footer-text"/>
+        <label for="footer-subscribe" class="footer-subscribe-label" id="footer-subscribe-label">
+            <input type="email" name="email" id="subscribe-footer-text" placeholder="E-mail" class="subscribe-footer-text"/>
         </label>
-        <button type="submit" class="subscribe-btn">Subscribe <a href="" class="icon-footer-btn"><svg class="icon-footer-sendpict" width="24" height="24" ><use href="./images/icons.svg#icon-icon-send"></use>
-            </svg></a>
+        <button type="submit" class="subscribe-btn">Subscribe <svg class="icon-footer-sendpict" width="24" height="24" ><use href="./images/icons.svg#icon-icon-send"></use>
+            </svg>
         </button>
 </form>
 </div>
@@ -306,9 +306,9 @@
 </footer>
 <div class="backdrop">
     <div class="modal">
-        <button type="button" class="modal-close"><a href="" class="modal-close-link">
+        <button type="button" class="modal-close">
             <svg class="icon-modal-close" width="8" height="8" ><use href="./images/icons.svg#icon-close-black"></use>
-        </svg></a>
+        </svg>
     </button>
     <p class="modal-title">Leave your contacts and we will call you back</p>
     <form class="modal-form">
