--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 <div class="footer-form-container">
     <p class="subscribe-text">Subscribe</p>
     <form class="footer-subscribe-form">
-        <label for="footer-subscribe" class="footer-subscribe-label" id="footer-subscribe-label">
+        <label for="footer-subscribe-label" class="footer-subscribe-label" id="footer-subscribe-label">
             <input type="email" name="email" id="subscribe-footer-text" placeholder="E-mail" class="subscribe-footer-text"/>
         </label>
         <button type="submit" class="subscribe-btn">Subscribe <svg class="icon-footer-sendpict" width="24" height="24" ><use href="./images/icons.svg#icon-icon-send"></use>
