--- a/index.html
+++ b/index.html
@@ -304,10 +304,10 @@
 </div>
 </div>
 </footer>
-<div class="backdrop">
+<div class="backdrop is-open">
     <div class="modal">
         <button type="button" class="modal-close">
-            <svg class="icon-modal-close" width="8" height="8" ><use href="./images/icons.svg#icon-close-black"></use>
+            <svg class="icon-modal-close" width="8" height="8" ><use href="./images/icons.svg#icon-close-icon"></use>
         </svg>
     </button>
     <p class="modal-title">Leave your contacts and we will call you back</p>
@@ -316,7 +316,7 @@
         <label for="user-name" class="modal-label">Name</label>
         <div class="modal-field-wrap">
 <input type="text" class="modal-input" name="user-name" id="user-name" />
-<svg class="modal-icon"  width="12" height="12" >
+<svg class="modal-icon"  width="18" height="24" >
     <use href="./images/icons.svg#icon-user"></use>
 </svg>
 </div>
@@ -325,7 +325,7 @@
 <label for="user-phone" class="modal-label">Phone</label>
 <div class="modal-field-wrap">
 <input type="tel" class="modal-input" name="user-phone" id="user-phone" />
-<svg class="modal-icon"  width="12" height="12" >
+<svg class="modal-icon"  width="18" height="24" >
     <use href="./images/icons.svg#icon-phone"></use>
 </svg>
 </div>
@@ -334,7 +334,7 @@
 <label for="user-email" class="modal-label">Email</label>
 <div class="modal-field-wrap">
 <input type="email" class="modal-input" name="user-email" id="user-email" />
-<svg class="modal-icon"  width="12" height="12" >
+<svg class="modal-icon"  width="18" height="24" >
     <use href="./images/icons.svg#icon-mail"></use>
 </svg>
 </div>
