--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <ul class="features-list">
         <li class="feature-item">
             <div class="feature-icon-container">
-                <svg width="64" height="64" ><use href="./images/icons.svg#icon-antenna-1"></use>
+                <svg width="64" height="64" ><use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
             </div>
      <h3 class="features">Strategy</h3>   
@@ -63,7 +63,7 @@
     </li>
     <li class="feature-item">
         <div class="feature-icon-container">
-            <svg width="64" height="64" ><use href="./images/icons.svg#icon-clock-1"></use>
+            <svg width="64" height="64" ><use href="./images/icons.svg#icon-clock"></use>
             </svg>
         </div>
     <h3 class="features">Punctuality</h3>
@@ -71,7 +71,7 @@
 </li>
     <li class="feature-item">
         <div class="feature-icon-container">
-            <svg width="64" height="64" ><use href="./images/icons.svg#icon-diagram-1"></use>
+            <svg width="64" height="64" ><use href="./images/icons.svg#icon-diagram"></use>
             </svg>
         </div>
     <h3 class="features">Diligence</h3>
@@ -79,7 +79,7 @@
 </li>
     <li class="feature-item">
         <div class="feature-icon-container">
-            <svg width="64" height="64" ><use href="./images/icons.svg#icon-astronaut-1"></use>
+            <svg width="64" height="64" ><use href="./images/icons.svg#icon-astronaut"></use>
             </svg>
         </div>
     <h3 class="features">Technologies</h3>
@@ -99,19 +99,19 @@
         <p class="teamprof">Product Designer</p>
             <ul class="icon-team-list">
 <li class="icon-team-item">
-    <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-instagram-2"></use>
+    <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-instagram"></use>
     </svg></a>
 </li>
 <li class="icon-team-item">
-    <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-twitter-1"></use>
+    <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-twitter"></use>
     </svg></a>
 </li>
 <li class="icon-team-item">
-    <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-facebook-1"></use>
+    <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-facebook"></use>
     </svg></a>
 </li>
 <li class="icon-team-item">
-    <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-linkedin-1"></use>
+    <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-linkedin"></use>
     </svg></a>
 </li>
             </ul>
@@ -124,19 +124,19 @@
         <p class="teamprof">Frontend Developer</p>
         <ul class="icon-team-list">
             <li class="icon-team-item">
-                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-instagram-2"></use>
+                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-instagram"></use>
                 </svg></a>
             </li>
             <li class="icon-team-item">
-                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-twitter-1"></use>
+                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-twitter"></use>
                 </svg></a>
             </li>
             <li class="icon-team-item">
-                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-facebook-1"></use>
+                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-facebook"></use>
                 </svg></a>
             </li>
             <li class="icon-team-item">
-                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-linkedin-1"></use>
+                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-linkedin"></use>
                 </svg></a>
             </li>
                         </ul>
@@ -149,19 +149,19 @@
         <p class="teamprof">Marketing</p>
         <ul class="icon-team-list">
             <li class="icon-team-item">
-                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-instagram-2"></use>
+                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-instagram"></use>
                 </svg></a>
             </li>
             <li class="icon-team-item">
-                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-twitter-1"></use>
+                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-twitter"></use>
                 </svg></a>
             </li>
             <li class="icon-team-item">
-                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-facebook-1"></use>
+                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-facebook"></use>
                 </svg></a>
             </li>
             <li class="icon-team-item">
-                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-linkedin-1"></use>
+                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-linkedin"></use>
                 </svg></a>
             </li>
                         </ul>
@@ -174,19 +174,19 @@
         <p class="teamprof">UI Designer</p>
         <ul class="icon-team-list">
             <li class="icon-team-item">
-                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-instagram-2"></use>
+                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-instagram"></use>
                 </svg></a>
             </li>
             <li class="icon-team-item">
-                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-twitter-1"></use>
+                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-twitter"></use>
                 </svg></a>
             </li>
             <li class="icon-team-item">
-                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-facebook-1"></use>
+                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-facebook"></use>
                 </svg></a>
             </li>
             <li class="icon-team-item">
-                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-linkedin-1"></use>
+                <a href="" class="icon-team-link"><svg class="icon-team-social" width="16" height="16" ><use href="./images/icons.svg#icon-linkedin"></use>
                 </svg></a>
             </li>
                         </ul>
@@ -274,19 +274,19 @@
     <p class="footer-social-par">Social media</p>
         <ul class="icon-footer-list">
             <li class="icon-footer-item">
-                <a href="" class="icon-footer-link"><svg class="icon-footer-social" width="24" height="24" ><use href="./images/icons.svg#icon-instagram-2"></use>
+                <a href="" class="icon-footer-link"><svg class="icon-footer-social" width="24" height="24" ><use href="./images/icons.svg#icon-instagram"></use>
                 </svg></a>
             </li>
             <li class="icon-footer-item">
-                <a href="" class="icon-footer-link"><svg class="icon-footer-social" width="24" height="24" ><use href="./images/icons.svg#icon-twitter-1"></use>
+                <a href="" class="icon-footer-link"><svg class="icon-footer-social" width="24" height="24" ><use href="./images/icons.svg#icon-twitter"></use>
                 </svg></a>
             </li>
             <li class="icon-footer-item">
-                <a href="" class="icon-footer-link"><svg class="icon-footer-social" width="24" height="24" ><use href="./images/icons.svg#icon-facebook-1"></use>
+                <a href="" class="icon-footer-link"><svg class="icon-footer-social" width="24" height="24" ><use href="./images/icons.svg#icon-facebook"></use>
                 </svg></a>
             </li>
             <li class="icon-footer-item">
-                <a href="" class="icon-footer-link"><svg class="icon-footer-social" width="24" height="24" ><use href="./images/icons.svg#icon-linkedin-1"></use>
+                <a href="" class="icon-footer-link"><svg class="icon-footer-social" width="24" height="24" ><use href="./images/icons.svg#icon-linkedin"></use>
                 </svg></a>
             </li>
                         </ul>
@@ -307,7 +307,7 @@
 <div class="backdrop is-open">
     <div class="modal">
         <button type="button" class="modal-close">
-            <svg class="icon-modal-close" width="8" height="8" ><use href="./images/icons.svg#icon-close-icon"></use>
+            <svg class="icon-modal-close" width="8" height="8" ><use href="./images/icons.svg#icon-close-black"></use>
         </svg>
     </button>
     <p class="modal-title">Leave your contacts and we will call you back</p>
