--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 </svg>
 </div>
 </div>
-<div class="modal-field">
+<div class="modal-field-comment">
     <label for="user-comment" class="modal-label">Comment</label>
     <textarea 
     name="user-comment" id="user-comment" 
@@ -347,8 +347,14 @@
     ></textarea>
 </div>
 <div class="modal-check-feild">
-<input type="checkbox" name="policy" id="policy" value="true" class="modal-check">
-<label for="policy" class="modal-text-policy">I accept the terms and conditions of the <span class="priv-pol">Privacy Policy</span></label>
+<input type="checkbox" name="user-privacy" id="user-privacy" value="true" class="modal-check visually-hidden">
+<label for="user-privacy" class="modal-text-policy">
+    <span class="checkbox-span-icon">
+        <svg class="modal-checkbox-icon"  width="10" height="8" >
+    <use href="./images/icons.svg#icon-checkbox"></use>
+</svg>
+    </span>
+    I accept the terms and conditions of the <a href="" class="priv-pol">Privacy Policy</a></label>
 </div>
 <button type="submit" class="modal-btn">Send</button>
     </form>
