--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 <label for="user-privacy" class="modal-text-policy">
     <span class="checkbox-span-icon">
         <svg class="modal-checkbox-icon"  width="10" height="8" >
-    <use href="./images/icons.svg#icon-checkbox"></use>
+    <use href="./images/icons.svg#icon-galka"></use>
 </svg>
     </span>
     I accept the terms and conditions of the <a href="" class="priv-pol">Privacy Policy</a></label>
